# bus-reservation-system

./: LICENSE  README.md  db.sqlite3  package-lock.json  pyproject.toml  requirements.txt
myapp/: admin.py  forms.py  models.py  urls.py  views.py
myapp/migrations/: 0001_initial.py  0002_auto_20190905_2107.py
myapp/static/mysite/: findbus.html  style.css
myapp/templates/myapp/: about.html  base.html  bookings.html  booklist.html  error.html  findbus.html  home.html  list.html  signin.html  signup.html  success.html  thank.html
myproject/: settings.py  urls.py
users/: forms.py  signals.py  tests.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  logout.html  profile.html  register.html
