[tool.poetry]
name = "bus-reservation-system"
version = "0.1.0"
description = "Bus Booking System"
authors = ["James Komo <james.komoh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.3"
pip = "^22.3.1"
psycopg2-binary = "^2.9.5"
whitenoise = "^6.2.0"
python-decouple = "^3.6"
dj-database-url = "^1.0.0"
bootstrap4 = "^0.1.0"
django-crispy-forms = "^1.14.0"
django-static-fontawesome = "^5.15.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
